# poc

./: .gitignore  README.md
airflow/: README.md  values-local.yaml
data-etl/: README.md  pyproject.toml
data-etl/pipelines/other/: __main__.py
data-etl/pipelines/salesforce/: __init__.py
kafka/: README.md
kafka-connect/: README.md  docker-compose.yml
kafka-connect/connectors/: mysql-sink.json  mysql-source.json
kafka-connect/db-data/: init.sql
kafka/charts/kafka/: Chart.yaml  values-dev.yaml  values-local.yaml  values.yaml
kafka/charts/kafka/templates/: 010-kafka-broker.yaml  020-bridge.yaml  021-bridge-external-service.yaml  030-ingress-rule.yaml  040-topics.yaml
kafka/doc/: local_development.md
